<resources>
    <string name="app_name">Desafio1_DSM</string>

    <!-- Texto Principal -->
    <string name="tittle_principal">Bienvenido/a a mi apliación 😺
    selecciona una de las siguientes opciones  </string>

    <!-- Textos principales para los botones -->
    <string name="btn_ejercicio1">Ejercicio 1: Promedio 📋🖋️</string>
    <string name="btn_ejercicio2">Ejercicio 2: Salario 🤑</string>
    <string name="btn_ejercicio3">Ejercicio 3: Calculadora 🔢</string>
    <string name="btn_volver">Volver al Menú</string>
    <string name="btn_calcular">Calcular</string>

    <!-- PROMEDIO -->
    <string name="title_promedio">Promedio del Estudiante</string>
    <string name="hint_nombre_estudiante">Nombre del estudiante</string>
    <string name="hint_nota1">Nota 1 (20%)</string>
    <string name="hint_nota2">Nota 2 (20%)</string>
    <string name="hint_nota3">Nota 3 (20%)</string>
    <string name="hint_nota4">Nota 4 (20%)</string>
    <string name="hint_nota5">Nota 5 (20%)</string>
    <string name="err_nota_invalida">La nota debe estar entre 0 y 10</string>
    <string name="err_campo_vacio">Campo obligatorio</string>

    <!-- SALARIO -->
    <string name="title_salario">Descuentos de Salario</string>
    <string name="hint_nombre_empleado">Nombre del empleado</string>
    <string name="hint_salario_base">Salario Base ($)</string>
    <string name="err_salario_invalido">El salario debe ser positivo</string>

    <!-- CALCULADORA -->
    <string name="title_calculadora">Calculadora Básica</string>
    <string name="hint_num1">Número 1</string>
    <string name="hint_num2">Número 2</string>
    <string name="err_div_zero">No se puede dividir entre cero</string>
    <string name="err_raiz_negativa">No se puede calcular raíz de un negativo</string>

    <!-- HISTORIAL de calculadora -->
    <string name="btn_ver_historial">Ver Historial</string>

</resources>