<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="@dimen/padding_standard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_promedio"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_medium"
            android:textColor="@color/texto_titulo"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_estudiante"
            android:inputType="textPersonName"/>

        <EditText android:id="@+id/etNota1" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_nota1" android:inputType="numberDecimal"/>
        <EditText android:id="@+id/etNota2" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_nota2" android:inputType="numberDecimal"/>
        <EditText android:id="@+id/etNota3" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_nota3" android:inputType="numberDecimal"/>
        <EditText android:id="@+id/etNota4" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_nota4" android:inputType="numberDecimal"/>
        <EditText android:id="@+id/etNota5" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_nota5" android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/btnCalcularPromedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_calcular"
            android:layout_marginTop="@dimen/margin_medium"
            android:backgroundTint="@color/verdecito"
            android:textColor="@color/texto_titulo"/>

        <TextView
            android:id="@+id/tvResultadoPromedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnVolverMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_volver"
            android:layout_marginTop="@dimen/margin_medium"
            android:backgroundTint="@color/rosita"
            android:textColor="@color/texto_botones"/>

    </LinearLayout>
</ScrollView>