<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_standard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_calculadora"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_medium"/>

        <EditText
            android:id="@+id/etNum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_num1"
            android:inputType="numberDecimal|numberSigned"/>

        <EditText
            android:id="@+id/etNum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_num2"
            android:inputType="numberDecimal|numberSigned"/>

        <!-- Grid para los botones de las operaciones -->
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            android:layout_marginTop="@dimen/margin_medium">

            <ImageButton
                android:id="@+id/btnSuma"
                android:layout_width="@dimen/tamanio_boton_calc"
                android:layout_height="@dimen/tamanio_boton_calc"
                android:src="@drawable/suma"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:id="@+id/btnResta"
                android:layout_width="@dimen/tamanio_boton_calc"
                android:layout_height="@dimen/tamanio_boton_calc"
                android:src="@drawable/resta"
                android:scaleType="fitCenter"/>

            <ImageButton
                android:id="@+id/btnMulti"
                android:layout_width="@dimen/tamanio_boton_calc"
                android:layout_height="@dimen/tamanio_boton_calc"
                android:src="@drawable/multiplicacion"
                android:scaleType="fitCenter"/>

            <ImageButton
                android:id="@+id/btnDiv"
                android:layout_width="@dimen/tamanio_boton_calc"
                android:layout_height="@dimen/tamanio_boton_calc"
                android:src="@drawable/division"
                android:scaleType="fitCenter"/>

            <ImageButton
                android:id="@+id/btnExp"
                android:layout_width="@dimen/tamanio_boton_calc"
                android:layout_height="@dimen/tamanio_boton_calc"
                android:src="@drawable/exponente"
                android:scaleType="fitCenter"/>

            <ImageButton
                android:id="@+id/btnRaiz"
                android:layout_width="@dimen/tamanio_boton_calc"
                android:layout_height="@dimen/tamanio_boton_calc"
                android:src="@drawable/raiz"
                android:scaleType="fitCenter"/>
        </GridLayout>

        <TextView
            android:id="@+id/tvResultadoCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_medium"/>

        <Button
            android:id="@+id/btnVerHistorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/btn_ver_historial" />

        <TextView
            android:id="@+id/tvHistorialCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/historial_texto"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="8dp"/>

        <Button
            android:id="@+id/btnVolverCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/btn_volver" />

    </LinearLayout>
</ScrollView>
